# innovativeproject-photographers-portfolio

./: .gitignore  .travis.yml  Dockerfile  Dockerfile.python  Dockerfile~  README.md  docker-compose.yml  pyproject.toml  upload.py
Editor/: package-lock.json  package.json
Editor/src/: App.css  App.js
TEST/portfolio/: crud.py  main.py  schemas.py
TEST/templates/: Login.html  Register.html
backend/: .flake8  Dockerfile  Dockerfile~  jinja_parser.py  log.txt  main.py  pyproject.toml
backend/portdb/: crud.py  main.py  models.py
backend/src/: Kursy-_-Wojciech-Domski-Edu-2020-06-03-00_13_41.html  album.py  auth.py  mainpage.py  message.py  models.py  parser.py  schemas.py  starymain.py
backend/src/route/: album.py  auth.py  mainpage.py  message.py
backend/static/styles/: about.css  base.css
backend/templates/: about.html  contact.html  index.html  item.html
backend/user/files/: index.html
frontend/: npm_install_ifError.sh  package-lock.json  package.json
frontend/public/: index.css
frontend/src/: App.css  App.js  AppRouter.js  index.css  index.js  setupProxy.js
loginpage/public/: index.html
loginpage/src/: App.css
portdb/: crud.py  database.py  main.py  models.py  schemas.py
portfolio/: forms.py  main1.py  portfolio.py  pyproject.toml  server.py
portfolio/Templates/: base.html  index.html
portfolio/Test/: main1.py
portfolio/loginpage/: package.json
portfolio/portdb/: crud.py  database.py  main.py  models.py  schemas.py
portfolio/templates/: about.html  base.html  contact.html  index.html  login.html  register.html
(+50 files in other folders)
