[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.52.0"
uvicorn = "^0.11.3"
jinja2 = "^2.11.1"
aiofiles = "^0.4.0"
python-multipart = "^0.0.5"
psycopg2-binary = "^2.8.5"
pydantic = "^1.4"
SQLAlchemy = "^1.3.16"
PyJWT = "^1.7"
passlib = "^1.7"
pendulum = "^2.1.0"
bcrypt = "^3.1.7"

[tool.poetry.dev-dependencies]
taskipy = "^1.2.1"
pylint = "^2.4.4"

[tool.taskipy.tasks]
dev-server = "uvicorn server:app --reload"
dev-db = "uvicorn portdb.main:app --reload"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"